# panoptico

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  azure-pipelines.yml
.github/workflows/: ci.yml  release.yml
src/: batch.rs  config.rs  context.rs  credential.rs  crypto.rs  error.rs  finding_id.rs  git.rs  hunk.rs  lib.rs  main.rs  metrics.rs  prompt.rs  reviewer.rs  validator.rs
src/backend/: anthropic.rs  azure_foundry.rs  bedrock.rs  claude_code.rs  mock.rs  mod.rs
src/languages/: brace_family.rs  config_files.rs  mod.rs  python.rs  scanner.rs  tests_core.rs
tests/fixtures/: api_error_auth.json  api_error_rate_limit.json  api_error_server.json  api_success.json  api_success_cached.json  api_success_with_category.json  bedrock_success.json  claude_code_error.json  claude_code_success.json  dev_config.toml  large_hunk.diff  minimal_config.toml  mode_change.diff  multi_file.diff  review_output_example.json  sample_config.toml  simple.diff
