[package]
name = "panoptico"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Julian Bolivar"]
license = "MIT OR Apache-2.0"
description = "AI-powered code review CLI for Pull Requests using Claude"
repository = "https://github.com/BolivarTech/panoptico"
documentation = "https://docs.rs/panoptico"
readme = "README.md"
keywords = ["code-review", "ai", "pull-request", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "panoptico"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
toml = "0.8"
toml_edit = "0.22"
aes-gcm-siv = "0.11"
argon2 = "0.5"
rand = "0.8"
reed-solomon = "0.2"
sha2 = "0.10"
zeroize = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"
